# kplp

./: .gitignore  LICENSE  README.md  _kec_safety.py  ecosystem.json  index.html  ksp_adapter.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  site_builder.py  validate_site.py
.github/workflows/: ci.yml  daily-health.yml  release.yml  type-check.yml
configs/: config.yaml
docs/: WALK_FORWARD_VALIDATION.md  api.md  architecture.md  deployment.md  index.md
kplp/: __init__.py  config.py  core.py  utils.py
reports/: kplp_attestation_2026-05-30.json
tests/: __init__.py  test_a_plus.py  test_config_validation.py  test_core.py  test_ecosystem.py  test_integration.py  test_integration_1.py  test_integration_2.py  test_integration_3.py  test_integration_4.py  test_integration_5.py  test_performance.py  test_security.py  test_site_1.py  test_site_2.py  test_site_3.py  test_site_4.py  test_site_5.py  test_site_6.py  test_site_7.py  test_site_8.py  test_site_builder.py  test_utils.py
